objects/Building__c.object
<CustomObject>
    <fields>
        <fullName>ACM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>old - to be removed</inlineHelpText>
        <label>ACM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Buildings10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Desks__c</fullName>
        <label>Available Desks</label>
        <summarizedField>Reservable__c.Office_Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Reservable__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Available_Offices__c</fullName>
        <label>Available Offices</label>
        <summaryFilterItems>
            <field>Reservable__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Building_ID__c</fullName>
        <externalId>true</externalId>
        <label>Building ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_to_Gate_A__c</fullName>
        <description>Date when a Building goes to Gate A</description>
        <inlineHelpText>Date when a Building goes to Gate A</inlineHelpText>
        <label>Building to Gate A</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Name__c</fullName>
        <label>Cluster Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Email__c</fullName>
        <label>Cluster Sales Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Name__c</fullName>
        <inlineHelpText>&gt;&gt;&gt;used for assignment of relational deal type</inlineHelpText>
        <label>Cluster Sales Lead Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Email__c</fullName>
        <label>Cluster Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Name__c</fullName>
        <label>Cluster Sales Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Lead_Name__c</fullName>
        <label>Community Lead Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>&gt;&gt;&gt;used for assignment of transactional deal type</inlineHelpText>
        <label>Community Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Buildings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Manager_Name__c</fullName>
        <label>Community Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Responsible CM of building
&gt;&gt;&gt;Contact lookup
&gt;&gt;&gt;For INTERNAL use - when person does not have a SFDC user license</inlineHelpText>
        <label>Community Manager (contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Sales_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>&gt;&gt;&gt;used for ROE assignment</inlineHelpText>
        <label>Community Sales Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Buildings_CSL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desks_Occupied_Right_Now__c</fullName>
        <label>Desks Occupied Right Now</label>
        <summarizedField>Reservable__c.Office_Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Reservable__c.Status_Right_Now__c</field>
            <operation>equals</operation>
            <value>Occupied</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Open_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/7/2014</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Desks_Ready_for_Occupany__c</fullName>
        <label>Desks Ready for Occupany</label>
        <summarizedField>Reservable__c.Office_Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Reservable__c.Open_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/1/2014</value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Director_of_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director of Community</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Buildings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GMT_Offset__c</fullName>
        <description>This is used to calculate the Timezone offset from GMT</description>
        <inlineHelpText>This is used to calculate the Timezone offset from GMT</inlineHelpText>
        <label>GMT Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gate__c</fullName>
        <description>Gate of the Building</description>
        <inlineHelpText>Gate of the Building</inlineHelpText>
        <label>Gate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>Unknown Contract</fullName>
                </value>
                <value>
                    <fullName>Inactive Contract</fullName>
                </value>
                <value>
                    <fullName>Pending Contract - Gate before A</fullName>
                </value>
                <value>
                    <fullName>Active Contract - Gate A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup of Geography object which is used to represent Google Maps Location so that we can reuse the same location as and when required within multiple objects.</description>
        <inlineHelpText>This field provides the exact or nearest google location where the building is located.</inlineHelpText>
        <label>Geography</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HQ_by_WeWork__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Building has a HQ by WeWork space</description>
        <inlineHelpText>The Building has a HQ by WeWork space</inlineHelpText>
        <label>HQ by WeWork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Last_Sync__c</fullName>
        <label>ID Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Building_Name__c</fullName>
        <description>This holds the legacy building name before we modified via change plan</description>
        <label>Legacy Building Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Licensor_Name__c</fullName>
        <label>Legal Licensor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_No_City__c</fullName>
        <description>Location without 3 character city reference. Removed NYC- or SF- etc</description>
        <label>Location No City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maximum_Tour_Days__c</fullName>
        <defaultValue>21</defaultValue>
        <label>Maximum Tour Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOT_Tourable_Sellable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This check box indicates if a building is NOT tourable and sellable for potential members</description>
        <inlineHelpText>This check box indicates if a building is NOT tourable and sellable for potential members</inlineHelpText>
        <label>Exclude from Marketing (Not Tourable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Longer_in_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Longer in Use?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occupancy_Rate__c</fullName>
        <formula>IF(Total_Desks__c = 0.00, 0.000,   Unavailable_Desks__c /  Total_Desks__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Desks in use</inlineHelpText>
        <label>Occupancy Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Occupancy_Rating__c</fullName>
        <formula>IF ( Total_Desks__c = 0, "No Reservables in Building", IF (Occupancy_Rate__c &gt; 0.75, "High", IF (Occupancy_Rate__c &gt; 0.25, "Medium", "Low")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Desks in use</inlineHelpText>
        <label>Occupancy Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offices_Occupied_Right_Now__c</fullName>
        <label>Offices Occupied Right Now</label>
        <summaryFilterItems>
            <field>Reservable__c.Status_Right_Now__c</field>
            <operation>equals</operation>
            <value>Occupied</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Open_Date__c</field>
            <operation>lessThan</operation>
            <value>3/1/2014</value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offices_Ready_for_Occupany__c</fullName>
        <label>Offices Ready for Occupany</label>
        <summaryFilterItems>
            <field>Reservable__c.Open_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/1/2014</value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opening_Date__c</fullName>
        <description>This field is used to show opening date of Building.</description>
        <label>Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <label>Portfolio Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Sales_Manager_Email__c</fullName>
        <label>Portfolio Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portfolio_Sales_Manager_Name__c</fullName>
        <label>Portfolio Sales Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Standard_Name__c</fullName>
        <label>Portfolio Standard Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Deal_Gate__c</fullName>
        <description>The Gate is defined by WeWork for Real Estate deal so anyone in organization can understand where the Real Estate Deal stands.

A: Real Estate Deal for the building is signed.
B: Term Sheet for the building is signed, and final negotiations are going on.
C: Building is identified by Real Estate team of interest and they can prepare term sheet to sign.
D: Real Estate has just identified the building and should run test design and viability of business.</description>
        <label>Real Estate Deal Gate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <label>Region Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Email__c</fullName>
        <label>Regional Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Name__c</fullName>
        <label>Regional Sales Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_CM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Community Manager that is assigned Accounts for Consumer Deals</description>
        <inlineHelpText>Responsible CM of building
&gt;&gt;&gt;SFDC User lookup
&gt;&gt;&gt;in old assignment rules used for assignment of transactional deal type</inlineHelpText>
        <label>Community Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>old - to be removed</inlineHelpText>
        <label>Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Buildings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Simultaneous_Tours__c</fullName>
        <label>Simultaneous Tours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager_Email__c</fullName>
        <label>Territory Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager_Name__c</fullName>
        <label>Territory Sales Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa/Algiers</fullName>
                </value>
                <value>
                    <fullName>Africa/Cairo</fullName>
                </value>
                <value>
                    <fullName>Africa/Casablanca</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Africa/Nairobi</fullName>
                </value>
                <value>
                    <fullName>America/Adak</fullName>
                </value>
                <value>
                    <fullName>America/Anchorage</fullName>
                </value>
                <value>
                    <fullName>America/Argentina/Buenos_Aires</fullName>
                </value>
                <value>
                    <fullName>America/Bogota</fullName>
                </value>
                <value>
                    <fullName>America/Caracas</fullName>
                </value>
                <value>
                    <fullName>America/Chicago</fullName>
                </value>
                <value>
                    <fullName>America/Denver</fullName>
                </value>
                <value>
                    <fullName>America/El_Salvador</fullName>
                </value>
                <value>
                    <fullName>America/Halifax</fullName>
                </value>
                <value>
                    <fullName>America/Indiana/Indianapolis</fullName>
                </value>
                <value>
                    <fullName>America/Lima</fullName>
                </value>
                <value>
                    <fullName>America/Los_Angeles</fullName>
                </value>
                <value>
                    <fullName>America/Mazatlan</fullName>
                </value>
                <value>
                    <fullName>America/Mexico_City</fullName>
                </value>
                <value>
                    <fullName>America/New_York</fullName>
                </value>
                <value>
                    <fullName>America/Panama</fullName>
                </value>
                <value>
                    <fullName>America/Phoenix</fullName>
                </value>
                <value>
                    <fullName>America/Puerto_Rico</fullName>
                </value>
                <value>
                    <fullName>America/Santiago</fullName>
                </value>
                <value>
                    <fullName>America/Sao_Paulo</fullName>
                </value>
                <value>
                    <fullName>America/Scoresbysund</fullName>
                </value>
                <value>
                    <fullName>America/St_Johns</fullName>
                </value>
                <value>
                    <fullName>America/Tijuana</fullName>
                </value>
                <value>
                    <fullName>Asia/Baghdad</fullName>
                </value>
                <value>
                    <fullName>Asia/Baku</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timezone_GMT_Offset__c</fullName>
        <formula>VALUE( 
CASE(Time_Zone__c, 
"America/Argentina/Buenos_Aires", "-3",
"America/Sao_Paulo", "-3",
"America/New_York", "-4", 
"America/Bogota", "-5",
"America/Mexico_City","-6", 
"America/Chicago", "-5", 
"America/Denver", "-6", 
"America/Los_Angeles", "-7", 
"Europe/London", "0", 
"Europe/Paris", "1", 
"Europe/Amsterdam", "1",
"Europe/Berlin", "1",
"Asia/Jerusalem", "3",
"Asia/Mumbai", "5.5",
"Asia/Shanghai","8",
"Asia/Hong_Kong", "8",
"Asia/Seoul", "9",
"Australia/Sydney", "10",
"0"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LEGACY FIELD - TO BE DEPRECIATED</inlineHelpText>
        <label>Timezone GMT Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Desks__c</fullName>
        <label>Total Desks</label>
        <summarizedField>Reservable__c.Office_Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Offices__c</fullName>
        <formula>Available_Offices__c +  Unavailable_Offices__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Offices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tour_Spacing__c</fullName>
        <label>Tour Spacing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Half Hour</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unavailable_Desks__c</fullName>
        <label>Unavailable Desks</label>
        <summarizedField>Reservable__c.Office_Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Reservable__c.Status__c</field>
            <operation>equals</operation>
            <value>Unavailable</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unavailable_Offices__c</fullName>
        <label>Unavailable Offices</label>
        <summaryFilterItems>
            <field>Reservable__c.Status__c</field>
            <operation>equals</operation>
            <value>Unavailable</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WeWork_Labs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to denote if the Building has a WeWork Labs Space</description>
        <inlineHelpText>Used to denote if the Building has a WeWork Labs Space</inlineHelpText>
        <label>WeWork Labs</label>
        <type>Checkbox</type>
    </fields>
    <label>Building</label>
    <nameField>
        <label>Building</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buildings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>Buildings_no_Portfolio</fullName>
        <columns>NAME</columns>
        <columns>UUID__c</columns>
        <columns>Market__c</columns>
        <columns>Cluster__c</columns>
        <columns>City__c</columns>
        <columns>Community_Lead__c</columns>
        <columns>Cluster_Name__c</columns>
        <columns>Cluster_Sales_Manager_Name__c</columns>
        <columns>Cluster_Sales_Lead_Name__c</columns>
        <columns>Portfolio_Name__c</columns>
        <columns>Portfolio_Sales_Manager_Name__c</columns>
        <columns>Territory_Name__c</columns>
        <columns>Territory_Sales_Manager_Name__c</columns>
        <columns>Region_Name__c</columns>
        <columns>Regional_Sales_Manager_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>No_Longer_in_Use__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Portfolio_Name__c</field>
            <operation>equals</operation>
        </filters>
        <label>Buildings no Portfolio</label>
    </listViews>
    <listViews>
        <fullName>Buildings_with_Details</fullName>
        <columns>NAME</columns>
        <columns>Occupancy_Rate__c</columns>
        <columns>City__c</columns>
        <columns>Community_Lead__c</columns>
        <columns>Cluster_Name__c</columns>
        <columns>Cluster_Sales_Manager_Name__c</columns>
        <columns>Cluster_Sales_Lead_Name__c</columns>
        <columns>Portfolio_Name__c</columns>
        <columns>Portfolio_Sales_Manager_Name__c</columns>
        <columns>Territory_Name__c</columns>
        <columns>Territory_Sales_Manager_Name__c</columns>
        <columns>Region_Name__c</columns>
        <columns>Regional_Sales_Manager_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>No_Longer_in_Use__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Buildings with Details</label>
    </listViews>
    <listViews>
        <fullName>Gate_B_Buildings</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Gate__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Market__c</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>gateb</value>
        </filters>
        <label>Gate B Buildings</label>
    </listViews>
</CustomObject>